kubernates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
#metadata
metadata:
  name: spring-kotlin-app-deployment
  namespace: spring-kotlin-app
  labels:
    name: spring-kotlin-app
#specification
spec:
  replicas: 3
  template:
    #template has its own metadata
    metadata:
      labels:
        name: spring-kotlin-app
    #template has its own specification also called the blueprint for pod
    spec:
      containers:
        - name: spring-kotlin-app
          image: nijogeorgep/spring-kotlin-app:latest
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      name: spring-kotlin-app
