kubernates/app-service.yaml
apiVersion: v1
kind: Service
#metadata
metadata:
  name: spring-kotlin-app-service
  namespace: spring-kotlin-app
#specification
spec:
  type: LoadBalancer
  selector:
    name: spring-kotlin-app
  ports:
    - nodePort: 30406
      port: 80
      protocol: TCP
      targetPort: 8080
