kubernates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: spring-kotlin.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: spring-kotlin-app-service
                port:
                  number: 80
